--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,7 @@
 h2. Overview
 
 Adds a /tt command for sending whispers to your current target. When used interactively it
-will dynamically change the text from /yy to a whisper showing your target's name. Also can be
+will dynamically change the text from /tt to a whisper showing your target's name. Also can be
 used from macros.
 
 No configuration required, just install and go.
